--- a/Src/SecondhandTrade/Views/Shared/_Layout.cshtml
+++ b/Src/SecondhandTrade/Views/Shared/_Layout.cshtml
@@ -20,7 +20,8 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("Items", "Items", "Home")</li>
+                <li>@Html.ActionLink("Items", "Index", "Item")</li>
+                <li>@Html.ActionLink("Create User", "Index", "User")</li>
             </ul>
             <p class="nav navbar-text navbar-right">Hello, @User.Identity.Name!</p>
         </div>
