--- a/Src/SecondhandTrade/Views/Home/Index.cshtml
+++ b/Src/SecondhandTrade/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 }
 
 <div class="row">
-    <div class="col-md-8" style="background-color: red; height: 100px; margin: 5px">
-        Hello Customer
+    <div class="col-md-8">
+        <h2>Welcome to the Secondhand Trade Platform</h2>
     </div>
     
-    <div class="col-md-4" style="background-color: blueviolet; height: 100px; margin: 5px">
-        Items
+    <div class="col-md-8">
+        You can sell your old items here, and buy items from other people.s
     </div>
 </div>
