--- a/Src/SecondhandTrade/Views/User/Index.cshtml
+++ b/Src/SecondhandTrade/Views/User/Index.cshtml
@@ -1,7 +1,34 @@
 ﻿
-@{
-    ViewBag.Title = "Index";
-}
+<h2>CreateUser</h2>
 
-<h2>Create a new User Account</h2>
-
+<form>
+    <div class="form-group">
+        <label for="inputEmail">User Name</label>
+        <input type="text" class="form-control" id="inputEmail" placeholder="User Name">
+    </div>
+    <div class="form-group">
+        <label for="inputPassword">First Name</label>
+        <input type="text" class="form-control" id="inputPassword" placeholder="First Name">
+    </div>
+    <div class="form-group">
+        <label for="inputPassword">Last Name</label>
+        <input type="text" class="form-control" id="inputPassword" placeholder="Last Name">
+    </div>
+    <div class="form-group">
+        <label for="inputPassword">Password</label>
+        <input type="text" class="form-control" id="inputPassword" placeholder="Street">
+    </div>
+    <div class="form-group">
+        <label for="inputPassword">Street</label>
+        <input type="text" class="form-control" id="inputPassword" placeholder="City">
+    </div>
+    <div class="form-group">
+        <label for="inputPassword">ZIP Code</label>
+        <input type="text" class="form-control" id="inputPassword" placeholder="ZIP Code">
+    </div>
+    <div class="form-group">
+        <label for="inputPassword">Country</label>
+        <input type="text" class="form-control" id="inputPassword" placeholder="Country">
+    </div>
+    <button type="submit" class="btn btn-primary">Create User</button>
+</form>
