--- a/Src/SecondhandTrade/Views/Home/Index.cshtml
+++ b/Src/SecondhandTrade/Views/Home/Index.cshtml
@@ -8,6 +8,6 @@
     </div>
     
     <div class="col-md-8">
-        You can sell your old items here, and buy items from other people.s
+        You can sell your old items here, and buy items from other people.
     </div>
 </div>
