--- a/Src/SecondhandTrade/Views/Item/Index.cshtml
+++ b/Src/SecondhandTrade/Views/Item/Index.cshtml
@@ -5,19 +5,16 @@
     ViewBag.Title = "Items";
 }
 
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-@*@foreach (Item item in Model)
-{*@
+@foreach (Item item in Model)
+{
     <a>
         <div class="col-md-4">
             @Html.ActionLink("Details", "Detail", "Item")
             <p>
                 <img src="https://wanderlustandsmoke.files.wordpress.com/2017/08/filipino-tabo-hinoki-plastic-ladle-1.jpg?w=286&h=212" />
             </p>
-            <h2>ItemName</h2>
-            <p>Price</p>
+            <h2>@item.ItemName</h2>
+            <p>@item.Price</p>
         </div>
-    </a>
-@*}*@
+    </a>   
+}
