many changes made

--- a/Src/SecondhandTrade/Views/Item/Index.cshtml
+++ b/Src/SecondhandTrade/Views/Item/Index.cshtml
@@ -1,20 +1,20 @@
 ﻿@using Secondhand.Domain.Model
 @model IEnumerable<Item>
-
 @{
     ViewBag.Title = "Items";
 }
 
-@foreach (Item item in Model)
+@*@foreach (Item item in Model)
 {
+    @Html.AntiForgeryToken()*@
     <a>
         <div class="col-md-4">
-            @Html.ActionLink("Details", "Detail", "Item")
             <p>
                 <img src="https://wanderlustandsmoke.files.wordpress.com/2017/08/filipino-tabo-hinoki-plastic-ladle-1.jpg?w=286&h=212" />
             </p>
-            <h2>@item.ItemName</h2>
-            <p>@item.Price</p>
+            <h2>ItemName</h2>
+            <p>Price</p>
+            @Html.ActionLink("Details", "Detail", "Item")
         </div>
     </a>   
-}
+@*}*@
