--- a/Src/SecondhandTrade/Content/bootstrap.css
+++ b/Src/SecondhandTrade/Content/bootstrap.css
@@ -21,6 +21,11 @@
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 
+.description {
+    color: black;
+    cursor: default;
+}
+
 .col-md-4 audio,
 canvas,
 video {
