--- a/Src/SecondhandTrade/Views/Shared/_Layout.cshtml
+++ b/Src/SecondhandTrade/Views/Shared/_Layout.cshtml
@@ -8,41 +8,48 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("Items", "Index", "Item")</li>
-                <li>@Html.ActionLink("Create User", "Index", "User")</li>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    @Html.ActionLink("Home", "Index", "Home")
+                </li>
+            </ul>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    @Html.ActionLink("Items", "Index", "Item")
+                </li>
+            </ul>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    @Html.ActionLink("Create User", "Index", "User")
+                </li>
             </ul>
         </div>
-    </div>
-</div>
+    </nav>
     
-<div class="jumbotron">
-    <h1>Secondhand Trade</h1>
-</div>
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Secondhand Trade</h1>
+        </div>
+    </div>
 
-<div class="container body-content">
-        @RenderBody()
-    <hr />
+    <div class="container">
+        <div class="row">
+            @RenderBody()
+        </div>
+    </div>
+
+            @Scripts.Render("~/bundles/jquery")
+            @Scripts.Render("~/bundles/bootstrap")
+            @RenderSection("scripts", required: false)
+    
     <footer class="footer">
         <div class="container">
-            <span class="text-muted">&copy; Cassandra Corrodi, Siemens Schweiz AG</span>
+            <span>
+                &copy; @DateTime.Now.Year Cassandra Corrodi
+            </span>
         </div>
     </footer>
-    </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
 </body>
 </html>
