--- a/Src/SecondhandTrade/Views/Shared/_Layout.cshtml
+++ b/Src/SecondhandTrade/Views/Shared/_Layout.cshtml
@@ -22,7 +22,12 @@
             </ul>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    @Html.ActionLink("Create User", "Index", "User")
+                    @Html.ActionLink("Create Profile", "Index", "User")
+                </li>
+            </ul>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    @Html.ActionLink("Login", "Index", "Login")
                 </li>
             </ul>
         </div>
