--- a/Src/SecondhandTrade/Content/bootstrap.css
+++ b/Src/SecondhandTrade/Content/bootstrap.css
@@ -21,6 +21,10 @@
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 
+.itemImage {
+    width: 100px;
+}
+
 .description {
     color: black;
     cursor: default;
