--- a/Src/SecondhandTrade/Views/Item/Index.cshtml
+++ b/Src/SecondhandTrade/Views/Item/Index.cshtml
@@ -6,21 +6,9 @@
     @Html.AntiForgeryToken()
     <a>
         <div class="col-md-4">
-            <div class="itemContainer">
-                @Html.ActionLink(" ", "Detail", "Item")
-                @{
-                    String img64 = Convert.ToBase64String(item.Image);
-                    String img64Url = string.Format("data:image;base64,{0}", img64);
-                }
-                <div class="imageContainer">
-                    <img src="@img64Url" class="itemImage"/>
-                </div>
-                <p class="description">@item.ItemName</p>
-                <p class="description">$@item.Price</p>
-            </div>
-            @*@{
+            @{
                 String img64 = Convert.ToBase64String(item.Image);
-                String img64Url = string.Format("data:image/" + item.Image + ";base64,{0}", img64);
+                String img64Url = string.Format("data:image;base64,{0}", img64);
             }
             <div class="imageContainer">
                 <img src="@img64Url" class="itemImage"/>
@@ -28,8 +16,8 @@
             <p class="description">@item.ItemName</p>
             <p class="description">$@item.Price</p>
             <button type="button" class="btn btn-light">
-                @Html.ActionLink("Details", "Detail", "Item")
-            </button>*@
+                @Html.ActionLink("Details", "Detail", "Item", new { id = item.Id}, null)
+            </button>
         </div>
     </a>
 }
