--- a/Src/SecondhandTrade/Views/Shared/_Layout.cshtml
+++ b/Src/SecondhandTrade/Views/Shared/_Layout.cshtml
@@ -8,58 +8,58 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    @Html.ActionLink("Home", "Index", "Home")
-                </li>
-            </ul>
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    @Html.ActionLink("Items", "Index", "Item")
-                </li>
-            </ul>
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    @Html.ActionLink("Create Profile", "Index", "User")
-                </li>
-            </ul>
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    @Html.ActionLink("Login", "Index", "Login")
-                </li>
-            </ul>
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    Welcome UserName!
-                </li>
-            </ul>
-        </div>
-    </nav>
-    
-    <div class="jumbotron">
-        <div class="container">
-            <h1>Secondhand Trade</h1>
-        </div>
-    </div>
-
+<div class="jumbotron">
     <div class="container">
-        <div class="row">
-            @RenderBody()
-        </div>
+        <h1>Secondhand Trade</h1>
     </div>
+</div>
+<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link">
+                    @Html.ActionLink("Home", "Index", "Home")
+                </a>
+            </li>
+        </ul>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link">
+                    @Html.ActionLink("Items", "Index", "Item")
+                </a>
+            </li>
+        </ul>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link">
+                    @Html.ActionLink("Create Profile", "Index", "User")
+                </a>
+            </li>
+        </ul>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link">
+                    @Html.ActionLink("Login", "Index", "Login")
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-            @Scripts.Render("~/bundles/jquery")
-            @Scripts.Render("~/bundles/bootstrap")
-            @RenderSection("scripts", required: false)
-    
-    <footer class="footer">
-        <div class="container">
-            <span>
-                &copy; @DateTime.Now.Year Cassandra Corrodi
-            </span>
-        </div>
-    </footer>
+<div class="container">
+    <div class="row">
+        @RenderBody()
+    </div>
+</div>
+
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+@RenderSection("scripts", required: false)
+
+<footer class="footer">
+    <div class="container">
+        <p class="text-muted">&copy; Cassandra Corrodi 2018</p>
+    </div>
+</footer>
 </body>
 </html>
