--- a/Src/SecondhandTrade/Views/User/Index.cshtml
+++ b/Src/SecondhandTrade/Views/User/Index.cshtml
@@ -9,7 +9,8 @@
         @Html.TextBoxFor(u => u.UserName, new
         {
             placeholder ="Username",
-            @class ="form-control"
+            @class ="form-control",
+            @readonly = "readonly"
         })
     </div>
     <div class="form-group">
@@ -58,15 +59,6 @@
         {
             placeholder = "Country",
             @class = "form-control"
-        })
-    </div>
-    <div class="form-group">
-        <label for="inputPassword">Password</label>
-        @Html.TextBoxFor(u => u.Password, new
-        {
-            placeholder = "Password",
-            @class = "form-control",
-            @type = "password"
         })
     </div>
     <button type="submit" name="buttonSubmit" class="btn btn-primary">Create User</button> 
