--- a/Src/SecondhandTrade/Views/Item/Detail.cshtml
+++ b/Src/SecondhandTrade/Views/Item/Detail.cshtml
@@ -4,20 +4,24 @@
 <a>
     <div class="col-md-12">
         <h2>@Model.ItemName</h2>
+        @{
+            String img64 = Convert.ToBase64String(Model.Image);
+            String img64Url = string.Format("data:image;base64,{0}", img64);
+        }
         <p>
-            <img src="" class="itemImage"/>
+            <img src="@img64Url" class="detailImage"/>
         </p>
         <h5>Description</h5>
-        <p>Description</p>
+        <p>@Model.Description</p>
 
         <h5>Year</h5>
-        <p>Year</p>
+        <p>@Model.Year</p>
 
         <h5>Price</h5>
-        <p>Price$</p>
+        <p>@Model.Price$</p>
 
         <h5>Seller</h5>
-        <p>UserId</p>
+        <p>@Model.UserId</p>
         <button>
             Buy Item
         </button>
