--- a/Src/SecondhandTrade/Views/Item/Detail.cshtml
+++ b/Src/SecondhandTrade/Views/Item/Detail.cshtml
@@ -1,6 +1,4 @@
-﻿@using System.Data.Entity
-@using System.Web.Mvc.Html
-@using Secondhand.Domain.Model
+﻿@using Secondhand.Domain.Model
 @model Item
 
 <a>
@@ -11,7 +9,7 @@
             String img64Url = string.Format("data:image;base64,{0}", img64);
         }
         <p>
-            <img src="@img64Url" class="detailImage"/>
+            <img src="@img64Url" class="detailImage" />
         </p>
         <h5>Description</h5>
         <p>@Model.Description</p>
@@ -24,7 +22,10 @@
 
         <h5>Seller</h5>
         <p>@Model.Seller.UserName</p>
-        <button class="btn btn-warning" name="deleteButton" onclick="buyItem">
+        
+        <p hidden>@Model.BuyerUserId</p>
+
+        <button class="btn btn-warning" type="submit" onclick="buyItem">
             Buy Item
         </button>
     </div>
