--- a/Src/SecondhandTrade/Content/bootstrap.css
+++ b/Src/SecondhandTrade/Content/bootstrap.css
@@ -6,11 +6,11 @@
  */
 
 .footer {
-    color: #000000;
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 60px;
+    line-height: 60px;
     background-color: #eee8aa;
 }
 
@@ -84,7 +84,7 @@ html {
 }
 
 @-ms-viewport {
-  width: device-width;
+    width: device-width;
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
@@ -92,14 +92,15 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  text-align: left;
-  background-color: #fff;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #fff;
+    margin-bottom: 80px;
 }
 
 [tabindex="-1"]:focus {
@@ -588,8 +589,12 @@ pre code {
   margin-left: auto;
 }
 
+.containerItems {
+    background: blue;
+}
+
 @media (min-width: 576px) {
-  .container {
+    .container {
     max-width: 540px;
   }
 }
