hidden input for user ID created in detail view

--- a/Src/SecondhandTrade/Views/Item/Detail.cshtml
+++ b/Src/SecondhandTrade/Views/Item/Detail.cshtml
@@ -26,7 +26,7 @@
         <h5>Seller</h5>
         <p>@Model.Seller.UserName</p>
 
-        <p hidden>@Model.BuyerUserId</p>
+        <input type="hidden" name="id" value="@Model.Id"/>
 
         <button class="btn btn-warning" type="submit">
             Buy Item
