link for purchased view added

--- a/Src/SecondhandTrade/Views/Shared/_Layout.cshtml
+++ b/Src/SecondhandTrade/Views/Shared/_Layout.cshtml
@@ -18,6 +18,9 @@
         <a class="nav-link">
             @Html.ActionLink("Edit Profile", "Index", "User")
         </a>
+        <a class="nav-link">
+            @Html.ActionLink("Purchased Items", "Index", "Purchased")
+        </a>
     </nav>
 
     <div class="jumbotron">
