list of items added to purchased view

--- a/Src/SecondhandTrade/Views/Purchased/Index.cshtml
+++ b/Src/SecondhandTrade/Views/Purchased/Index.cshtml
@@ -1,5 +1,10 @@
-﻿<ul class="list-group">
-    <li class="list-group-item">Item</li>
-    <li class="list-group-item">Item</li>
-    <li class="list-group-item">Item</li>
-</ul>
+﻿@using Secondhand.Domain.Model
+@model IEnumerable<Item>
+
+@foreach (Item item in Model)
+{
+    @Html.AntiForgeryToken()
+    <ul class="list-group">
+        <li class="list-group-item">@item.ItemName</li>
+    </ul>
+}
